Some UI changes

--- a/css/slides.css
+++ b/css/slides.css
@@ -83,11 +83,13 @@ body
 	background-color: rgba(255,255,255,0.7);
 	display: none;
 	left: 40px;
+	border-width: 1px;
+	border-radius: 30px;
 	padding: 20px;
 	padding-right: 20px;
 	position: absolute;
 	top: 40px;
-	width: 320px;
+	width: 220px;
 	z-index: 10;
 }
 #slides_container.visible
