--- a/css/scroll.css
+++ b/css/scroll.css
@@ -85,9 +85,9 @@ html
 }
 .inner-header
 {
-	background: #333;
+	background: #fff;
 	color: #fff;
-	padding: 20px 0;
+	padding: 30px 0;
 }
 #layout
 {
@@ -103,7 +103,7 @@ html
 }
 #header h1
 {
-	color: #fff;
+	color: #000;
 	font: 40px 'AleoBold';
 }
 #header h2
@@ -138,7 +138,7 @@ html
 }
 #header p
 {
-	color: rgba(255,255,255,0.6);
+	color: #000;
 	font: 16px/26px 'AleoRegular';
 	margin-top: 12px;
 }
@@ -207,7 +207,7 @@ html
 }
 #content.attachMap
 {
-	margin-top: 250px;
+	margin-top: 0px;
 }
 #content>div
 {
